--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -1,8 +1,16 @@
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
+*{
+  box-sizing: border-box;
+  margin: 0;
+  padding: 0;
+}
 body {
-  background-color: #e2dccf;
+  background-color: white;
+  box-sizing: border-box;
+  margin: 0;
+  padding: 0;
 }
 @layer utilities {
   .text-balance {
@@ -12,3 +20,8 @@ body {
 .thumbs-wrapper {
   display: none;
 }
+.react-photo-gallery--gallery{
+  background-color:#4f4530;
+}
+
+
