--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -31,3 +31,16 @@ body {
 background-size: cover;
 }
 
+.mapouter {
+  width: auto;
+  height: 400px;
+}
+.gmap_canvas {
+  overflow: hidden;
+  background: none !important;
+  width:auto;
+  height: 400px;
+}
+.gmap_iframe {
+  height: 400px !important;
+}
